March 17th & 18th, 2025

--- a/GAMES/1Diamond.html
+++ b/GAMES/1Diamond.html
@@ -3420,7 +3420,29 @@
                 </tr>
             </tbody> 
 
-                          <!-- day20-->
+                          <!-- day21-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">21</td>
+                    <td class="days"><small>Mar., Mon 17th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">50</td>
+                    <td class="winning">19</td>
+                    <td class="winning">43</td>
+                    <td class="winning">31</td>
+                    <td class="winning" id="lbw">39</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">45</td>
+                    <td class="machine">26</td>
+                    <td class="machine">18</td>
+                    <td class="machine">2</td>
+                    <td class="machine" id="lbm">88</td>
+                </tr>
+            </tbody>
+
+                          <!-- day22-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
