--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1735,15 +1735,15 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., 19th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">31</td>
+                    <td class="winning">87</td>
+                    <td class="winning">80</td>
+                    <td class="winning">10</td>
+                    <td class="winning" id="lbw">16</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
