--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1734,15 +1734,15 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>Mar., 20th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">35</td>
+                    <td class="winning">17</td>
+                    <td class="winning">20</td>
+                    <td class="winning">57</td>
+                    <td class="winning" id="lbw">37</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
