--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -3448,7 +3448,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day20-->
+                          <!-- day22-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">22</td>
+                    <td class="days"><small>Mar., Fri 21st</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">16</td>
+                    <td class="winning">9</td>
+                    <td class="winning">88</td>
+                    <td class="winning">52</td>
+                    <td class="winning" id="lbw">46</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">73</td>
+                    <td class="machine">47</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">84</td>
+                </tr>
+            </tbody>
+
+                         <!-- day23-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
