--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1727,22 +1727,22 @@
                         <!-- day10-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">10</td>
+                    <td class="days"><small>mar., 21st</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">75</td>
+                    <td class="winning">27</td>
+                    <td class="winning">23</td>
+                    <td class="winning">19</td>
+                    <td class="winning" id="lbw">61</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">1</td>
+                    <td class="machine">68</td>
+                    <td class="machine">38</td>
+                    <td class="machine">41</td>
+                    <td class="machine" id="lbm">82</td>
                 </tr>
             </tbody>
 
