up-to-date March 23rd, 2025

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1759,11 +1759,11 @@
                     <td class="winning" id="lbw">44</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">22</td>
+                    <td class="machine">18</td>
+                    <td class="machine">87</td>
+                    <td class="machine">74</td>
+                    <td class="machine" id="lbm">29</td>
                 </tr>
             </tbody>
 
@@ -1789,6 +1789,7 @@
                 </tr>
             </tbody>
         </table>
+        <span>MSP</span>
     </main>
 </body>
 </html>
