--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1766,11 +1766,11 @@
                     <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">85</td>
+                    <td class="machine">82</td>
+                    <td class="machine">90</td>
+                    <td class="machine">4</td>
+                    <td class="machine" id="lbm">51</td>
                 </tr>
             </tbody>
 
@@ -1796,6 +1796,8 @@
                 </tr>
             </tbody>
         </table>
+        <span>LUCKY-G</span>
+
     </main>
 </body>
 </html>
