--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1767,7 +1767,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day20-->
+                          <!-- day12-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">12</td>
+                    <td class="days"><small>Mar., 24th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">36</td>
+                    <td class="winning">37</td>
+                    <td class="winning">21</td>
+                    <td class="winning">12</td>
+                    <td class="winning" id="lbw">50</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">90</td>
+                    <td class="machine">7</td>
+                    <td class="machine">64</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">74</td>
+                </tr>
+            </tbody>
+
+                         <!-- day13-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
