--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -3473,7 +3473,30 @@
                 </tr>
             </tbody>
 
-                          <!-- day23-->
+                           <!-- day23-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">23</td>
+                    <td class="days"><small>Mar., Mon 24th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">27</td>
+                    <td class="winning">41</td>
+                    <td class="winning">42</td>
+                    <td class="winning">77</td>
+                    <td class="winning" id="lbw">33</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">83</td>
+                    <td class="machine">44</td>
+                    <td class="machine">10</td>
+                    <td class="machine">53</td>
+                    <td class="machine" id="lbm">1</td>
+                </tr>
+            </tbody>
+
+                          <!-- day24-->
+
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
