--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -3491,7 +3491,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day23-->
+                         <!-- day24-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">24</td>
+                    <td class="days"><small>Mar., Sat 29th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">70</td>
+                    <td class="winning">66</td>
+                    <td class="winning">35</td>
+                    <td class="winning">46</td>
+                    <td class="winning" id="lbw">76</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">88</td>
+                    <td class="machine">49</td>
+                    <td class="machine">25</td>
+                    <td class="machine">58</td>
+                    <td class="machine" id="lbm">3</td>
+                </tr>
+            </tbody>
+
+                        <!-- day25-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
