March 31st and April 1st

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1790,11 +1790,11 @@
                     <td class="winning" id="lbw">89</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">31</td>
+                    <td class="machine">18</td>
+                    <td class="machine">43</td>
+                    <td class="machine">65</td>
+                    <td class="machine" id="lbm">54</td>
                 </tr>
             </tbody>
 
