--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1789,11 +1789,11 @@
                     <td class="winning" id="lbw">55</td>
                     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">2</td>
+                    <td class="machine">62</td>
+                    <td class="machine">53</td>
+                    <td class="machine">6</td>
+                    <td class="machine" id="lbm">55</td>
                 </tr>
             </tbody>
 
