--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1782,11 +1782,11 @@
                     <td class="winning" id="lbw">65</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">27</td>
+                    <td class="machine">56</td>
+                    <td class="machine">7</td>
+                    <td class="machine">6</td>
+                    <td class="machine" id="lbm">8</td>
                 </tr>
             </tbody>
 
