--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1797,11 +1797,11 @@
                     <td class="winning" id="lbw">77</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">9</td>
+                    <td class="machine">85</td>
+                    <td class="machine">31</td>
+                    <td class="machine">55</td>
+                    <td class="machine" id="lbm">81</td>
                 </tr>
             </tbody>
 
