--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -3490,7 +3490,7 @@
             </tbody>
 
                            <!-- day24-->
-            <tbody id="correction">
+            <tbody class="correction">
                 <tr>
                     <td class="serial-num">24</td>
                     <td class="days"><small>Mar., Thurs 27th</small></td>
@@ -3534,6 +3534,28 @@
             </tbody>
 
                         <!-- day26-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">26</td>
+                    <td class="days"><small>Apr., Thurs 3rd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">10</td>
+                    <td class="winning">32</td>
+                    <td class="winning">6</td>
+                    <td class="winning">80</td>
+                    <td class="winning" id="lbw">39</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">53</td>
+                    <td class="machine">30</td>
+                    <td class="machine">5</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">74</td>
+                </tr>
+            </tbody>
+
+                        <!-- day27-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
