--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -3534,7 +3534,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day24-->
+                        <!-- day26-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">26</td>
+                    <td class="days"><small>Apr., Fri 4th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">32</td>
+                    <td class="winning">63</td>
+                    <td class="winning">44</td>
+                    <td class="winning">90</td>
+                    <td class="winning" id="lbw">38</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">9</td>
+                    <td class="machine">64</td>
+                    <td class="machine">43</td>
+                    <td class="machine">73</td>
+                    <td class="machine" id="lbm">13</td>
+                </tr>
+            </tbody>
+
+                        <!-- day27-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
