April 7th & 8th 2025

--- a/index.html
+++ b/index.html
@@ -128,14 +128,19 @@
   </div>
         <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
             <aside class="review" style="text-align: center; line-height: 1.5;" >
-                <h1>Review</h1>
+                <h2>Review</h2>
                 <p style="font-size: 18px;">Kindly take few seconds of your time to rate our content</p>
                 <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
             </aside>
         </div>
 
         <div style="text-align: center;">
-            <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a>
+            <h3>Catch Our Prediction on Social Media</h3>
+            <p>Follow us to get our games</p>
+            <a href="https://web.facebook.com/visuaLottoBoard" target="_blank">facebook</a>
+            <a href="https://x.com/visuaLottoBoard" target="_blank">twitter</a>
+            <a href="">instagram</a>
+            <!-- <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a> -->
         </div>
 
 
