--- a/GAMES/13Vag.html
+++ b/GAMES/13Vag.html
@@ -3575,7 +3575,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day28-->
+                        <!-- day27-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">27</td>
+                    <td class="days"><small>Apr Fri 11th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">40</td>
+                    <td class="winning">66</td>
+                    <td class="winning">46</td>
+                    <td class="winning">80</td>
+                    <td class="winning" id="lbw">67</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">35</td>
+                    <td class="machine">59</td>
+                    <td class="machine">17</td>
+                    <td class="machine" id="lbm">29</td>
+                </tr>
+            </tbody>
+
+                         <!-- day29-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
