--- a/GAMES/1Diamond.html
+++ b/GAMES/1Diamond.html
@@ -3606,7 +3606,7 @@
                    
                     <!-- winning-->
                     <td class="winning"></td>
-                    <td class="winning"></td>
+                    <td class="winning"></td>n
                     <td class="winning"></td>
                     <td class="winning"></td>
                     <td class="winning" id="lbw"></td>
