--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         <div style="text-align: center;">
             <h3>Catch Our Prediction on Social Media</h3>
             <p>Follow us to get our games</p>
-            <a href="https://web.facebook.com/visuaLottoBoard" target="_blank">facebook</a>
-            <a href="https://x.com/visuaLottoBoard" target="_blank">twitter</a>
-            <a href="">instagram</a>
+            <a style="margin: 20px;" href="https://web.facebook.com/visuaLottoBoard" target="_blank">facebook</a>
+            <a style="margin: 20px;" href="https://x.com/visuaLottoBoard" target="_blank">twitter</a>
+            <!-- <a href="">instagram</a> -->
             <!-- <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a> -->
         </div>
 
