April 12th & 13th, 2025

--- a/GAMES/16Fair-c.html
+++ b/GAMES/16Fair-c.html
@@ -3647,7 +3647,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day28-->
+                          <!-- day28-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">28</td>
+                    <td class="days"><small>Apr Sat 12th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">70</td>
+                    <td class="winning">76</td>
+                    <td class="winning">53</td>
+                    <td class="winning">10</td>
+                    <td class="winning" id="lbw">80</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">60</td>
+                    <td class="machine">89</td>
+                    <td class="machine">5</td>
+                    <td class="machine">82</td>
+                    <td class="machine" id="lbm">9</td>
+                </tr>
+            </tbody>
+
+                         <!-- day29-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
