--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1833,11 +1833,11 @@
                     <td class="winning" id="lbw">62</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">50</td>
+                    <td class="machine">69</td>
+                    <td class="machine">39</td>
+                    <td class="machine" id="lbm">90</td>
                 </tr>
             </tbody>
 
