--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                                  <!-- disclaimer-->
         <aside  class="disclaimer">
-            <p><strong>Disclaimer</strong></p> 
+            <h1><strong>Disclaimer</strong></h1> 
             <p class="disclaim-message"> Hologuti Business Centre <b>(HBC)</b>'s <i>Visual Lotto Board (VLB)</i> is created for entertainment purposes only. 
             <b>HBC</b> is not connected to, or approved by any of the lottory organization, or any other body that related to any of the game used, 
             and does not endorse any lottery or gambling game, and also does not encourage anyone to gamble.
