--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1833,7 +1833,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day28-->
+                        <!-- day15-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">15</td>
+                    <td class="days"><small>Apr 14th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">49</td>
+                    <td class="winning">47</td>
+                    <td class="winning">81</td>
+                    <td class="winning">6</td>
+                    <td class="winning" id="lbw">17</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">65</td>
+                    <td class="machine">62</td>
+                    <td class="machine">38</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">67</td>
+                </tr>
+            </tbody>
+
+                         <!-- day16-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
