--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -3577,7 +3577,7 @@
                 </tr>
             </tbody>
 
-                        <!-- day27-->
+                        <!-- day28-->
             <tbody>
                 <tr>
                     <td class="serial-num">27</td>
@@ -3599,7 +3599,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day28-->
+                         <!-- day29-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">29</td>
+                    <td class="days"><small>Apr Mon 14th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">30</td>
+                    <td class="winning">80</td>
+                    <td class="winning">28</td>
+                    <td class="winning">78</td>
+                    <td class="winning" id="lbw">63</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">77</td>
+                    <td class="machine">35</td>
+                    <td class="machine">8</td>
+                    <td class="machine">3</td>
+                    <td class="machine" id="lbm">5</td>
+                </tr>
+            </tbody>
+
+                         <!-- day30-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
