--- a/classification.html
+++ b/classification.html
@@ -200,6 +200,10 @@
 
     <h1>lotto classification chart</h1>
 
+    <div style="background-color: transparent;">
+        <a href="support.html" style="width:max-content; display: block; width: 100%; color: green; font-size: 18px; text-align: center; font-weight: bold;">Learn about our new developer</a>
+    </div>
+
     <!-- <dialog>  -->
 
     <div class="container">
