--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                     <h1 id="visual-lotto-board">Visual Lotto Board</h1>
                 <!-- </div> -->
             </div>
+
+            <a href="support.html" style="width:max-content; display: block; width: 100%; background-color: green; font-size: 18px; color: white; text-align: center; font-weight: bold;">Learn about our new developer</a>
+            
             <nav>
                 <h1 class="list-of-games">List of Games</h1>
                 <ul>                   
@@ -111,7 +114,8 @@
                     <!-- <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a> -->
                     <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
-                </div> 
+                     <a class="anchor " href="support.html#accountNumber" style="background-color: green;">Support Our New Development</a>
+                </div>
             </nav>
         </header>
 
