include *to drive winning*

--- a/support.html
+++ b/support.html
@@ -14,7 +14,7 @@
 
    <div style="font-size: 1.3rem; margin: 2%;">
       <p>Dear Friends and Supporters,</p>
-      <p>We are thrilled to announce our ambitious plan to revolutionize <em>forecasting</em> and <em>predictions</em> through a groundbreaking project. To bring this vision to life, we are embarking on a transformative one-year initiative that will lay the foundation for scalable, long-term development.</p>
+      <p>We are thrilled to announce our ambitious plan to revolutionize <em>forecasting</em> and <em>predictions</em> through a groundbreaking project in other to drive WINNING. To bring this vision to life, we are embarking on a transformative one-year initiative that will lay the foundation for scalable, long-term development.</p>
 
       <p>Our estimated budget for this project is <b> <span style="text-decoration: line-through; text-decoration-style: double;">N</span>15,000,000</b> <em style="font-size: 18px;">(fifteen million naira)</em>. This amount will cover:</p>
 
@@ -24,7 +24,7 @@
       </ul>
    </div>
 
-   <p style="font-size: 1.3rem; margin: 2%;">We believe this project has immense potential to make a significant impact, and we cannot achieve this goal without your help. Every contribution brings us closer to turning this vision into reality.</p>
+   <p style="font-size: 1.3rem; margin: 2%;">We believe this project has immense potential to drive winnings, and we cannot achieve this goal without your help. Every contribution brings us closer to turning this vision into reality.</p>
       
    <p style="font-size: 1.3rem; margin: 2%;">If you're ready to support, you can find our account details below:</p>
 
