--- a/support.html
+++ b/support.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="robots" content="noindex, nofollow">
-   <title>Document</title>
+   <meta name="description" content="we are revolutionizing forecasting and predictions">
+   <title>New Development</title>
 </head>
 <body>
    <header>
