28th-to29th April

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1887,22 +1887,22 @@
                           <!-- day17-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">17</td>
+                    <td class="days"><small>Apr 29th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">90</td>
+                    <td class="winning">34</td>
+                    <td class="winning">13</td>
+                    <td class="winning">63</td>
+                    <td class="winning" id="lbw">4</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">20</td>
+                    <td class="machine">41</td>
+                    <td class="machine">3</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody>
         </table>
