--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1900,11 +1900,11 @@
                     <td class="winning" id="lbw">45</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">64</td>
+                    <td class="machine">79</td>
+                    <td class="machine">24</td>
+                    <td class="machine">26</td>
+                    <td class="machine" id="lbm">71</td>
                 </tr>
             </tbody>
 
