--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1899,11 +1899,11 @@
                     <td class="winning" id="lbw">20</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">88</td>
+                    <td class="machine">87</td>
+                    <td class="machine">84</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">53</td>
                 </tr>
             </tbody>
 
