--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1892,11 +1892,11 @@
                     <td class="winning" id="lbw">76</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">87</td>
+                    <td class="machine">54</td>
+                    <td class="machine">74</td>
+                    <td class="machine" id="lbm">6</td>
                 </tr>
             </tbody>
 
