--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -3709,7 +3709,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day33-->
+                        <!-- day34-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">34</td>
+                    <td class="days"><small>May 3rd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">75</td>
+                    <td class="winning">85</td>
+                    <td class="winning">86</td>
+                    <td class="winning">34</td>
+                    <td class="winning" id="lbw">45</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">40</td>
+                    <td class="machine">89</td>
+                    <td class="machine">21</td>
+                    <td class="machine">50</td>
+                    <td class="machine" id="lbm">44</td>
+                </tr>
+            </tbody>
+
+                         <!-- day35-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
