--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -3730,7 +3730,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day33-->
+                        <!-- day34-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">34</td>
+                    <td class="days"><small>May 4th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">63</td>
+                    <td class="winning">30</td>
+                    <td class="winning">80</td>
+                    <td class="winning">43</td>
+                    <td class="winning" id="lbw">27</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">13</td>
+                    <td class="machine">53</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">3</td>
+                </tr>
+            </tbody>
+
+                         <!-- day35-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
