--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1905,6 +1905,28 @@
                     <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody>
+
+                         <!-- day18-->
+            <tbody>
+                <tr>
+                    <td class="serial-num"></td>
+                    <td class="days"><small></small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>
         </table>
         <span>LUCKY-G</span>
 
