--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1878,7 +1878,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day33-->
+                        <!-- day17-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">17</td>
+                    <td class="days"><small>May 3rd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">24</td>
+                    <td class="winning">35</td>
+                    <td class="winning">49</td>
+                    <td class="winning">27</td>
+                    <td class="winning" id="lbw">33</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">63</td>
+                    <td class="machine">43</td>
+                    <td class="machine">90</td>
+                    <td class="machine">47</td>
+                    <td class="machine" id="lbm">48</td>
+                </tr>
+            </tbody>
+
+                         <!-- day18-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
