--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1902,22 +1902,22 @@
                         <!-- day18-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">18</td>
+                    <td class="days"><small>Mat 5th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">17</td>
+                    <td class="winning">72</td>
+                    <td class="winning">65</td>
+                    <td class="winning">55</td>
+                    <td class="winning" id="lbw">35</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">68</td>
+                    <td class="machine">29</td>
+                    <td class="machine">36</td>
+                    <td class="machine" id="lbm">64</td>
                 </tr>
             </tbody>
         </table>
