create info for result last update

--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
             <!-- <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a> -->
         </div>
 
-
+        <aside class="info">
+            Last updated: May 5, 2025
+            <i class="fa-solid fa-circle-info" style="color: green;"></i>
+        </aside>
                 <!-- main -->
         <main>
             <div class="btn-container">
@@ -283,7 +286,6 @@
                         <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                         <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                         <a href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-youtube"  aria-label="connect on our YouTube channel, watch live demo of how to navigate our platform"></i></a>
-
                     </div> 
                 </div>
                 <div class="developer">
