--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1920,6 +1920,28 @@
                     <td class="machine" id="lbm">64</td>
                 </tr>
             </tbody>
+
+                        <!-- day19-->
+            <tbody>
+                <tr>
+                    <td class="serial-num"></td>
+                    <td class="days"><small></small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody>
         </table>
         <span>MSP</span>
     </main>
